# agentic-ai

./: .dockerignore  .env.example  .env.oauth_example  .gitignore  ADVANCED.md  AUTH.md  CHANGELOG.md  COMMANDS.md  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  GETTING_STARTED.md  GIT_PUSH_INSTRUCTIONS.md  HF_SPACES_QUICK_START.md  LICENSE  OAUTH_SETUP.py  PROFESSIONAL_CHECKLIST.md  PROFESSIONAL_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_WIZARD_FLOW.py  SYSTEM_SUMMARY.py  WORKFLOWS.md  agentic  app.py  demo.py  demo_credit_system.py  demo_oauth.py  demo_setup_wizard.py  demo_workflow.py  deploy-hf.sh  hf-deploy.sh  integration_test.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_wizard.py  test_oauth_integration.py  (+3 more)
.demo_users/: demo_user.json
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.projects/sai/port3/: README.md  config.json  project.json
.streamlit/: config.toml  secrets.toml.example
.workflows/: --topic-1773777567.json  --topic-1773777688.json  --topic-1773777689.json  --topic-1773777806.json  --topic-1773777822.json  --topic-1773777823.json  --topic-1773777870.json  --topic-1773777896.json  --topic-1773777931.json  --topic-1773777983.json  --topic-1773778037.json  --topic-1773778461.json  --topic-1773778784.json  e commerce website-1773779019.json  e commerce website-1773779027.json  e commerce-1774528919.json  portfolio-website-1774528304.json
docs/: API_REFERENCE.md  ARCHITECTURE.md
examples/: build_website.py
src/: __init__.py
src/agents/: __init__.py  backend_agent.py  frontend_agent.py  orchestrator_agent.py
src/auth/: __init__.py  oauth_manager.py  user_manager.py
src/cli/: __init__.py  commands.py
src/config/: __init__.py  backend_api.py  llm_adapter.py  logging_config.py  open_source_models.py  settings.py
src/framework/: __init__.py  agent_factory.py  base_agent.py  workflow.py
src/utils/: __init__.py  exceptions.py  helpers.py
tests/: __init__.py  conftest.py  mock_agents.py  test_agents.py  test_framework.py
(+8 files in other folders)
